SFUSA/force-app/main/default/objects/Case/fields/Account_Label__c.field-meta.xml
<CustomField>
        <fullName>Account_Label__c</fullName>
        <formula>Account.Name</formula>
        <label>Account Label</label>
        <type>Text</type>
    </CustomField>