SFUSA/force-app/main/default/objects/Case/fields/Account_Missing__c.field-meta.xml
<CustomField>
        <fullName>Account_Missing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>International Accounts for the Single Barrel program do not exist in Salesforce as of 8/20/2018, this field indicates that</description>
        <label>Account Missing</label>
        <type>Checkbox</type>
    </CustomField>