SFUSA/force-app/main/default/objects/Case/fields/Account_Owner__c.field-meta.xml
<CustomField>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.Owner.FirstName &amp; " " &amp; Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </CustomField>