SFUSA/force-app/main/default/objects/Case/fields/AccountState__c.field-meta.xml
<CustomField>
        <fullName>AccountState__c</fullName>
        <description>Used in w/f rule for updating the Account state</description>
        <label>Account State</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>