SFUSA/force-app/main/default/objects/Case/fields/Additional_Details_Rich_Text__c.field-meta.xml
<CustomField>
        <fullName>Additional_Details_Rich_Text__c</fullName>
        <description>A rich text field used to specify additional details about a Case. Rich Text can be used to add styling. This field is used in email templates for Compliance.</description>
        <inlineHelpText>Used to specify additional details about handling this Case with the option of extra styling.</inlineHelpText>
        <label>Additional Details</label>
        <length>5000</length>
        <type>Html</type>
    </CustomField>