SFUSA/force-app/main/default/objects/Case/fields/AdditionalInformation__c.field-meta.xml
<CustomField>
        <fullName>AdditionalInformation__c</fullName>
        <label>Additional Information</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>How_can_we_help__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
                <value>
                    <fullName>Free Product</fullName>
                </value>
                <value>
                    <fullName>Free Merchandise</fullName>
                </value>
                <value>
                    <fullName>Product Availability</fullName>
                </value>
                <value>
                    <fullName>Problem with my Order</fullName>
                </value>
                <value>
                    <fullName>Nutritional Information</fullName>
                </value>
                <value>
                    <fullName>Value of my bottle</fullName>
                </value>
                <value>
                    <fullName>Product Ingredients</fullName>
                </value>
                <value>
                    <fullName>Product Shelf life</fullName>
                </value>
                <value>
                    <fullName>Decanter Inquiry</fullName>
                </value>
                <value>
                    <fullName>Distributions</fullName>
                </value>
                <value>
                    <fullName>Work for us</fullName>
                </value>
                <value>
                    <fullName>Be a Brand Influencer</fullName>
                </value>
                <value>
                    <fullName>License our Brand</fullName>
                </value>
                <value>
                    <fullName>Suppliers</fullName>
                </value>
                <value>
                    <fullName>Rebates</fullName>
                </value>
                <value>
                    <fullName>Coupons</fullName>
                </value>
                <value>
                    <fullName>Website Question/Issue</fullName>
                </value>
                <value>
                    <fullName>Login</fullName>
                </value>
                <value>
                    <fullName>Points</fullName>
                </value>
                <value>
                    <fullName>Plots</fullName>
                </value>
                <value>
                    <fullName>Used Barrels</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>General Inquiry</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Liquid</fullName>
                </value>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Can</fullName>
                </value>
                <value>
                    <fullName>Gluten</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>