SFUSA/force-app/main/default/objects/Case/fields/Age__c.field-meta.xml
<CustomField>
        <fullName>Age__c</fullName>
        <formula>IF(IsClosed, 
(ClosedDate - CreatedDate),  
(NOW() - CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>