SFUSA/force-app/main/default/objects/Case/fields/Allocation_Allocated_From__c.field-meta.xml
<CustomField>
        <fullName>Allocation_Allocated_From__c</fullName>
        <label>Allocation Allocated From</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>