SFUSA/force-app/main/default/objects/Case/fields/Amount__c.field-meta.xml
<CustomField>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>