SFUSA/force-app/main/default/objects/Case/fields/Amount_INR__c.field-meta.xml
<CustomField>
        <fullName>Amount_INR__c</fullName>
        <label>Amount (INR)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>