SFUSA/force-app/main/default/objects/Case/fields/Annex_VIII__c.field-meta.xml
<CustomField>
        <fullName>Annex_VIII__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annex VIII?</label>
        <type>Checkbox</type>
    </CustomField>