SFUSA/force-app/main/default/objects/Case/fields/Approval_Needed__c.field-meta.xml
<CustomField>
        <fullName>Approval_Needed__c</fullName>
        <label>Approval Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No - Discount Matches Calendar</fullName>
                </value>
                <value>
                    <fullName>No - No Discounts</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>