SFUSA/force-app/main/default/objects/Case/fields/Assign_Queue_to_Case__c.field-meta.xml
<CustomField>
        <fullName>Assign_Queue_to_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field is set to true, it will trigger case assignment rules to update the case owner</description>
        <label>Assign Queue to Case</label>
        <type>Checkbox</type>
    </CustomField>