SFUSA/force-app/main/default/objects/Case/fields/Audit__c.field-meta.xml
<CustomField>
        <fullName>Audit__c</fullName>
        <label>Audit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>