SFUSA/force-app/main/default/objects/Case/fields/Availability_Date_Known__c.field-meta.xml
<CustomField>
        <fullName>Availability_Date_Known__c</fullName>
        <label>Availability Date Known?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>