SFUSA/force-app/main/default/objects/Case/fields/Balance_Due__c.field-meta.xml
<CustomField>
        <fullName>Balance_Due__c</fullName>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>