SFUSA/force-app/main/default/objects/Case/fields/Barrel_Number__c.field-meta.xml
<CustomField>
        <fullName>Barrel_Number__c</fullName>
        <label>Barrel Number</label>
        <length>25</length>
        <type>Text</type>
    </CustomField>