SFUSA/force-app/main/default/objects/Case/fields/Barrel_Order_Group__c.field-meta.xml
<CustomField>
        <fullName>Barrel_Order_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Barrel Order Group</label>
        <referenceTo>Barrel_Order_Group__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </CustomField>