SFUSA/force-app/main/default/objects/Case/fields/Barrel_Selected__c.field-meta.xml
<CustomField>
        <fullName>Barrel_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Barrel Selected</label>
        <type>Checkbox</type>
    </CustomField>