SFUSA/force-app/main/default/objects/Case/fields/Barrel_Selected_Date__c.field-meta.xml
<CustomField>
        <fullName>Barrel_Selected_Date__c</fullName>
        <label>Barrel Selected Date</label>
        <type>DateTime</type>
    </CustomField>