SFUSA/force-app/main/default/objects/Case/fields/BGC_Purchase_Order_Number__c.field-meta.xml
<CustomField>
        <fullName>BGC_Purchase_Order_Number__c</fullName>
        <label>BGC Purchase Order Number</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>