SFUSA/force-app/main/default/objects/Case/fields/Billing_Report_Tag__c.field-meta.xml
<CustomField>
        <fullName>Billing_Report_Tag__c</fullName>
        <label>Report Tag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1099/1042 inquiries</fullName>
                </value>
                <value>
                    <fullName>401k/Retirement</fullName>
                </value>
                <value>
                    <fullName>6th7th Day</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Add Output</fullName>
                </value>
                <value>
                    <fullName>Address Inquiry/Issue</fullName>
                </value>
                <value>
                    <fullName>Adhoc Report</fullName>
                </value>
                <value>
                    <fullName>ADL</fullName>
                </value>
                <value>
                    <fullName>Adoption</fullName>
                </value>
                <value>
                    <fullName>Aires</fullName>
                </value>
                <value>
                    <fullName>Annual Bonus (AIP, SIP)</fullName>
                </value>
                <value>
                    <fullName>ATI/PA request</fullName>
                </value>
                <value>
                    <fullName>Attendees Required/Missing</fullName>
                </value>
                <value>
                    <fullName>Auto Allowance</fullName>
                </value>
                <value>
                    <fullName>Available Expense/Import Inquiries</fullName>
                </value>
                <value>
                    <fullName>Awards</fullName>
                </value>
                <value>
                    <fullName>Bad Pin/Pin Reset</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Banking Details update</fullName>
                </value>
                <value>
                    <fullName>BCD requested vendor/merchant not available</fullName>
                </value>
                <value>
                    <fullName>BCD Travel Rate Inquiry</fullName>
                </value>
                <value>
                    <fullName>Beam Global</fullName>
                </value>
                <value>
                    <fullName>Beam Pac</fullName>
                </value>
                <value>
                    <fullName>Benefit Focus</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>BI Review/Questions/Inquiries</fullName>
                </value>
                <value>
                    <fullName>Bonus (Sign-On, )</fullName>
                </value>
                <value>
                    <fullName>Brand Ambassador</fullName>
                </value>
                <value>
                    <fullName>Brokerage</fullName>
                </value>
                <value>
                    <fullName>CA Adjustment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>