SFUSA/force-app/main/default/objects/Case/fields/Billing_SAP_Number__c.field-meta.xml
<CustomField>
        <fullName>Billing_SAP_Number__c</fullName>
        <label>Billing SAP Number</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>