SFUSA/force-app/main/default/objects/Case/fields/Bottle_Pickup_Request__c.field-meta.xml
<CustomField>
        <fullName>Bottle_Pickup_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bottle Pickup Request</label>
        <type>Checkbox</type>
    </CustomField>