SFUSA/force-app/main/default/objects/Case/fields/Bottle_Text_Entered_Date__c.field-meta.xml
<CustomField>
        <fullName>Bottle_Text_Entered_Date__c</fullName>
        <label>Bottle Text Entered Date</label>
        <type>DateTime</type>
    </CustomField>