SFUSA/force-app/main/default/objects/Case/fields/Bottling_Plant__c.field-meta.xml
<CustomField>
        <fullName>Bottling_Plant__c</fullName>
        <label>Bottling Plant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACCU-TEC</fullName>
                </value>
                <value>
                    <fullName>ADL</fullName>
                </value>
                <value>
                    <fullName>Alepat Taylor</fullName>
                </value>
                <value>
                    <fullName>Arcobasso</fullName>
                </value>
                <value>
                    <fullName>Behror</fullName>
                </value>
                <value>
                    <fullName>Blue Ocean</fullName>
                </value>
                <value>
                    <fullName>BSUK-Springburn</fullName>
                </value>
                <value>
                    <fullName>Burlington</fullName>
                </value>
                <value>
                    <fullName>Carolina Beer</fullName>
                </value>
                <value>
                    <fullName>CCA - AB Co.</fullName>
                </value>
                <value>
                    <fullName>CCA - Australia</fullName>
                </value>
                <value>
                    <fullName>CCA - Australia, New Zealand</fullName>
                    <isActive>false</isActive>
                    <label>CCA - Australia, New Zealand</label>
                </value>
                <value>
                    <fullName>CCA - Australia - HO</fullName>
                </value>
                <value>
                    <fullName>CCA - Australia - Moorabbin</fullName>
                </value>
                <value>
                    <fullName>CCA - Australia - Richlands</fullName>
                </value>
                <value>
                    <fullName>CCA - New Zealand</fullName>
                </value>
                <value>
                    <fullName>CCA - QLD Richlands</fullName>
                </value>
                <value>
                    <fullName>CCA - SA Thebarton</fullName>
                    <isActive>false</isActive>
                    <label>CCA - SA Thebarton</label>
                </value>
                <value>
                    <fullName>CCA - VIC Moorabbin</fullName>
                </value>
                <value>
                    <fullName>CCA - WA Kewdale</fullName>
                </value>
                <value>
                    <fullName>CCA - WA Perth</fullName>
                </value>
                <value>
                    <fullName>CCA - WLD Richlands</fullName>
                    <isActive>false</isActive>
                    <label>CCA - WLD Richlands</label>
                </value>
                <value>
                    <fullName>Clermont</fullName>
                </value>
                <value>
                    <fullName>Cooley</fullName>
                </value>
                <value>
                    <fullName>Cooleys</fullName>
                    <isActive>false</isActive>
                    <label>Cooleys</label>
                </value>
                <value>
                    <fullName>Corporate Quality</fullName>
                    <isActive>false</isActive>
                    <label>Corporate Quality</label>
                </value>
                <value>
                    <fullName>Cott - Mexico</fullName>
                </value>
                <value>
                    <fullName>Cott - Mississauga</fullName>
                </value>
                <value>
                    <fullName>Cott - Viscount</fullName>
                </value>
                <value>
                    <fullName>DIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>