SFUSA/force-app/main/default/objects/Case/fields/Brand__c.field-meta.xml
<CustomField>
        <fullName>Brand__c</fullName>
        <description>The brand that is used in the Brand Registration process.</description>
        <inlineHelpText>Brand that is being registered</inlineHelpText>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>(ri)1</fullName>
                </value>
                <value>
                    <fullName>100 Anos</fullName>
                </value>
                <value>
                    <fullName>2 Gingers</fullName>
                </value>
                <value>
                    <fullName>Aftershock</fullName>
                </value>
                <value>
                    <fullName>Alberta Premium</fullName>
                </value>
                <value>
                    <fullName>Alberta Pure</fullName>
                </value>
                <value>
                    <fullName>Alberta Rye</fullName>
                </value>
                <value>
                    <fullName>Alberta Springs</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>Ardmore</fullName>
                </value>
                <value>
                    <fullName>Auchentoshan</fullName>
                </value>
                <value>
                    <fullName>Baker's</fullName>
                </value>
                <value>
                    <fullName>Banff Ice</fullName>
                </value>
                <value>
                    <fullName>Banff Summit</fullName>
                </value>
                <value>
                    <fullName>Basil Hayden's</fullName>
                </value>
                <value>
                    <fullName>Beam Suntory Corporate</fullName>
                </value>
                <value>
                    <fullName>Booker's</fullName>
                </value>
                <value>
                    <fullName>Bowmore</fullName>
                </value>
                <value>
                    <fullName>Bruxo</fullName>
                </value>
                <value>
                    <fullName>Calico Jack</fullName>
                </value>
                <value>
                    <fullName>Canadian Club</fullName>
                </value>
                <value>
                    <fullName>Canadian Club RTD</fullName>
                </value>
                <value>
                    <fullName>Castellana</fullName>
                </value>
                <value>
                    <fullName>CHITA</fullName>
                    <label>Chita</label>
                </value>
                <value>
                    <fullName>Conch</fullName>
                </value>
                <value>
                    <fullName>Connemara</fullName>
                </value>
                <value>
                    <fullName>Courvoisier</fullName>
                </value>
                <value>
                    <fullName>Cruzan</fullName>
                </value>
                <value>
                    <fullName>DeKuyper</fullName>
                </value>
                <value>
                    <fullName>DYC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>