SFUSA/force-app/main/default/objects/Case/fields/Brand_Label__c.field-meta.xml
<CustomField>
        <fullName>Brand_Label__c</fullName>
        <formula>text(Brand__c) + ' ' + text(Product_Type__c)</formula>
        <label>Brand</label>
        <type>Text</type>
    </CustomField>