SFUSA/force-app/main/default/objects/Case/fields/BSI_Function__c.field-meta.xml
<CustomField>
        <fullName>BSI_Function__c</fullName>
        <formula>IF(CONTAINS(RecordType.Name, "GMDM"), "GBS", 
IF(CONTAINS(RecordType.Name, "OTC"), "GBS",
CASE(RecordType.Name ,
"HR","GBS",
"Open Enrollment Inquiries", "GBS",
"PTP/AP","GBS",
"PTP/AP - PR/PO","GBS",
"Payroll","GBS",
"RTR","GBS",
"T&amp;E","GBS",
"Tax","GBS",
"Claims","GBS",
"Registration Approval","GBS",
"GBS Outlook","GBS",
"Brand Registration", "Compliance",
"Compliance Sub Case", "Compliance",
"Quote Request", "Compliance",
"Price Posting", "Compliance",
"Price Filing", "Compliance",
"Discount", "Compliance",
"Compliance Inquiry", "Compliance",
"CS"
)))</formula>
        <label>BSI Function</label>
        <type>Text</type>
    </CustomField>