SFUSA/force-app/main/default/objects/Case/fields/Budget_Code__c.field-meta.xml
<CustomField>
        <fullName>Budget_Code__c</fullName>
        <label>Budget Code</label>
        <length>7</length>
        <type>Text</type>
    </CustomField>