SFUSA/force-app/main/default/objects/Case/fields/Business_day__c.field-meta.xml
<CustomField>
        <fullName>Business_day__c</fullName>
        <formula>CASE(
  MOD( DATEVALUE(CreatedDate)- DATE( 1900, 1, 8 ), 7 ),
  0, "Monday",
  1, "Tuesday",
  2, "Wednesday",
  3, "Thursday",
  4, "Friday",
  5, "Saturday", 
  "Sunday"
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business day</label>
        <type>Text</type>
    </CustomField>