SFUSA/force-app/main/default/objects/Case/fields/Business_Function__c.field-meta.xml
<CustomField>
        <fullName>Business_Function__c</fullName>
        <label>Business Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BusinessFunction</valueSetName>
        </valueSet>
    </CustomField>