SFUSA/force-app/main/default/objects/Case/fields/Business_Phone__c.field-meta.xml
<CustomField>
        <fullName>Business_Phone__c</fullName>
        <label>Business Phone</label>
        <type>Phone</type>
    </CustomField>