SFUSA/force-app/main/default/objects/Case/fields/Case_Age_Calc__c.field-meta.xml
<CustomField>
        <fullName>Case_Age_Calc__c</fullName>
        <formula>NOW() - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age Calc (in hours)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </CustomField>