SFUSA/force-app/main/default/objects/Case/fields/Case_Age_In_Business_Hours__c.field-meta.xml
<CustomField>
        <fullName>Case_Age_In_Business_Hours__c</fullName>
        <label>Case Age In Business Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </CustomField>