SFUSA/force-app/main/default/objects/Case/fields/Case_City__c.field-meta.xml
<CustomField>
        <fullName>Case_City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>